--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,9 @@
   --bgColor : #fafafa;
   --sideColor : #1976d2;
   --hoverColor : #e2e2e2;
+  --textColor : #000;
+  --textColor2 : #757575;
+  --sidemanu: #f5f5f5;
 }
 html {
   line-height: 1.15;
@@ -19,7 +22,7 @@ html {
 }
 
 body {
-  background-color: var(--bgColor);
+  background-color: var(--mainColor);
   line-height: 1;
   font-family: "Cairo", sans-serif;
 }
@@ -57,7 +60,7 @@ pre {
 }
 
 .va-sidebar__menu {
-  background-color: #fafafa !important;
+  background-color: var(--bgColor) !important;
   width: 4rem !important; /* Default width for smaller screens */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
